--- a/DadJokes/Views/Home/Random.cshtml
+++ b/DadJokes/Views/Home/Random.cshtml
@@ -1,5 +1,9 @@
-﻿@{
+﻿@model DadJokes.Models.Joke
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div>
+    <p>@Model.Content</p>
+</div>
 
