working version, needs styling and comments

--- a/DadJokes/Views/Home/ByTerm.cshtml
+++ b/DadJokes/Views/Home/ByTerm.cshtml
@@ -1,36 +1,36 @@
-﻿@model Dictionary<string, List<DadJokes.Models.Joke>>
+﻿@model Dictionary<string, List<DadJokes.Models.DisplayJoke>>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
     <div>
-        @if (Model["shortJokes"].Count > 0)
+        @if (Model["shortJoke"].Count > 0)
         {
             <div>
                 <p>These are the short jokes matching your search:</p>
-                @foreach (var joke in Model["shortJokes"])
+                @foreach (var joke in Model["shortJoke"])
                 {
-                    <p>joke.HighlightContent</p>
+                    <p>@joke.HighlightContent</p>
                 }
             </div>
         }
-        @if (Model["midJokes"].Count > 0)
+        @if (Model["midJoke"].Count > 0)
         {
             <div>
                 <p>These are the mid-length jokes matching your search:</p>
-                @foreach (var joke in Model["shortJokes"])
+                @foreach (var joke in Model["midJoke"])
                 {
-                    <p>joke.HighlightContent</p>
+                    <p>@joke.HighlightContent</p>
                 }
             </div>
         }
-        @if (Model["longJokes"].Count > 0)
+        @if (Model["longJoke"].Count > 0)
         {
             <div>
                 <p>These are the long jokes matching your search:</p>
-                @foreach (var joke in Model["shortJokes"])
+                @foreach (var joke in Model["longJoke"])
                 {
-                    <p>joke.HighlightContent</p>
+                    <p>@joke.HighlightContent</p>
                 }
             </div>
         }
