--- a/DadJokes/Views/Shared/_Layout.cshtml
+++ b/DadJokes/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
             </div>
         </div>
     </div>
+    <div class="jumbotron text-center">
+        <h1>Can Haz Dad Jokes?</h1>
+        <p class="lead">Utliizing an API service to find random or search based Dad Jokes.</p>
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
