--- a/DadJokes/Views/Home/Random.cshtml
+++ b/DadJokes/Views/Home/Random.cshtml
@@ -1,9 +1,10 @@
-﻿@model DadJokes.Models.Joke
+﻿@model DadJokes.Models.JokeResponse
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-    <p>@Model.joke</p>
+<div class="text-center">
+    <h3 class="list-group-item-heading">Here's your Random Joke! </h3>
+    <h4 class="list-group-item text-danger">@Model.joke</h4>
 </div>
 
